--- a/kubernetes/apps/media/immich/app/microservices/helmrelease.yaml
+++ b/kubernetes/apps/media/immich/app/microservices/helmrelease.yaml
@@ -44,13 +44,14 @@ spec:
               - secretRef:
                   name: immich
             resources:
-              requests:
-                cpu: 10m
+              resources:
+                requests:
+                  cpu: 15m
+                  memory: 298M
+                limits:
+                  cpu: 15m
+                  memory: 298M
                 gpu.intel.com/i915: 1
-                memory: 512Mi
-              limits:
-                gpu.intel.com/i915: 1
-                memory: 8000Mi
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
