--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -50,12 +50,12 @@ spec:
               TZ: ${TIMEZONE}
             resources:
               requests:
-                memory: 10M
-                # gpu.intel.com/i915: 1
+                cpu: 23m
+                memory: 7118M
               limits:
+                cpu: 23m
+                memory: 7118M
                 nvidia.com/gpu: 1
-                # gpu.intel.com/i915: 1
-                memory: 16Gi
     service:
       main:
         controller: main
