--- a/kubernetes/apps/media/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyseerr/app/helmrelease.yaml
@@ -61,9 +61,11 @@ spec:
               capabilities: { drop: ["ALL"] }
             resources:
               requests:
-                cpu: 10m
+                cpu: 15m
+                memory: 273M
               limits:
-                memory: 3Gi
+                cpu: 15m
+                memory: 273M
         pod:
           securityContext:
             runAsUser: 568
