--- a/kubernetes/apps/media/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/radarr/app/helmrelease.yaml
@@ -78,9 +78,11 @@ spec:
               capabilities: { drop: ["ALL"] }
             resources:
               requests:
-                cpu: 10m
+                cpu: 15m
+                memory: 443M
               limits:
-                memory: 1Gi
+                cpu: 15m
+                memory: 443M
         pod:
           securityContext:
             runAsUser: 1000
