--- a/kubernetes/apps/media/recyclarr/app/configs/recyclarr.yml
+++ b/kubernetes/apps/media/recyclarr/app/configs/recyclarr.yml
@@ -18,10 +18,10 @@ radarr:
 
     include:
       # Comment out any of the following includes to disable them
-      #1080
-      - template: radarr-quality-definition-sqp-streaming
-      - template: radarr-quality-profile-sqp-1-1080p
-      - template: radarr-custom-formats-sqp-1-1080p
+      # #1080
+      # - template: radarr-quality-definition-sqp-streaming
+      # - template: radarr-quality-profile-sqp-1-1080p
+      # - template: radarr-custom-formats-sqp-1-1080p
       #2160
       - template: radarr-quality-definition-sqp-uhd
       - template: radarr-quality-profile-sqp-2
@@ -51,7 +51,7 @@ radarr:
           # - name: SQP-2
             # score: 0
       # - trash_ids:
-          # - dc98083864ea246d05a42df0d05f81cc # x265 (HD)
+      #     - dc98083864ea246d05a42df0d05f81cc # x265 (HD)
         assign_scores_to:
           - name: SQP-2
 
@@ -65,12 +65,12 @@ radarr:
           - 923b6abef9b17f937fab56cfcf89e1f1 # DV (WEBDL)
 
           # Uncomment any of the following if you want them to be added to the quality profile
-          # - b6832f586342ef70d9c128d40c07b872 # Bad Dual Groups
-          # - 90cedc1fea7ea5d11298bebd3d1d3223 # EVO (no WEBDL)
-          # - ae9b7c9ebde1f3bd336a8cbd1ec4c5e5 # No-RlsGroup
-          # - 7357cf5161efbf8c4d5d0c30b4815ee2 # Obfuscated
-          # - 5c44f52a8714fdd79bb4d98e2673be1f # Retags
-          # - f537cf427b64c38c8e36298f657e4828 # Scene
+          - b6832f586342ef70d9c128d40c07b872 # Bad Dual Groups
+          - 90cedc1fea7ea5d11298bebd3d1d3223 # EVO (no WEBDL)
+          - ae9b7c9ebde1f3bd336a8cbd1ec4c5e5 # No-RlsGroup
+          - 7357cf5161efbf8c4d5d0c30b4815ee2 # Obfuscated
+          - 5c44f52a8714fdd79bb4d98e2673be1f # Retags
+          - f537cf427b64c38c8e36298f657e4828 # Scene
           # - f700d29429c023a5734505e77daeaea7 # DV (Disk)
         assign_scores_to:
           - name: SQP-2
