--- a/kubernetes/apps/media/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyseerr/app/helmrelease.yaml
@@ -64,7 +64,7 @@ spec:
                 cpu: 15m
                 memory: 105M
               limits:
-                cpu: 24m
+                # cpu: 24m
                 memory: 611M
         pod:
           securityContext:
