--- a/kubernetes/apps/media/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/radarr/app/helmrelease.yaml
@@ -81,7 +81,7 @@ spec:
                 cpu: 15m
                 memory: 105M
               limits:
-                cpu: 24m
+                # cpu: 24m
                 memory: 997M
         pod:
           securityContext:
