--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -81,7 +81,7 @@ spec:
                 cpu: 15m
                 memory: 105M
               limits:
-                cpu: 51m
+                # cpu: 51m
                 memory: 507M
         pod:
           securityContext:
