--- a/kubernetes/apps/media/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyseerr/app/helmrelease.yaml
@@ -63,9 +63,9 @@ spec:
               requests:
                 cpu: 15m
                 memory: 105M
-              limits:
+              # limits:
                 # cpu: 24m
-                memory: 611M
+                # memory: 611M
         pod:
           securityContext:
             runAsUser: 568
