--- a/kubernetes/apps/media/immich/app/machine-learning/helmrelease.yaml
+++ b/kubernetes/apps/media/immich/app/machine-learning/helmrelease.yaml
@@ -65,9 +65,9 @@ spec:
                 requests:
                   cpu: 15m
                   memory: 226M
-                limits:
-                  cpu: 15m
-                  memory: 226M
+                # limits:
+                #   cpu: 15m
+                #   memory: 226M
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
