--- a/kubernetes/apps/home/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/home/frigate/app/helmrelease.yaml
@@ -74,13 +74,13 @@ spec:
               privileged: true
             resources:
               requests:
-                cpu: 1737m
-                memory: 6118M
+                cpu: 1465m
+                memory: 4733M
               limits:
-                cpu: 1737m
+                cpu: 3996m
+                memory: 14G
                 # gpu.intel.com/i915: 1
                 nvidia.com/gpu: 1
-                memory: 6118M
         pod:
           nodeSelector:
             google.feature.node.kubernetes.io/coral: "true"
