--- a/kubernetes/apps/system-upgrade/k3s/app/plan.yaml
+++ b/kubernetes/apps/system-upgrade/k3s/app/plan.yaml
@@ -45,6 +45,6 @@ spec:
         operator: DoesNotExist
   prepare:
     image: rancher/k3s-upgrade
-    args: ["prepare", "server"]
+    args: ["prepare", "workers"]
   upgrade:
     image: rancher/k3s-upgrade
