--- a/kubernetes/apps/system-upgrade/k3s/app/plan.yaml
+++ b/kubernetes/apps/system-upgrade/k3s/app/plan.yaml
@@ -47,6 +47,6 @@ spec:
         operator: DoesNotExist
   prepare:
     image: rancher/k3s-upgrade
-    args: ["prepare", "workers"]
+    args: ["prepare", "controllers"]
   upgrade:
     image: rancher/k3s-upgrade
