--- a/kubernetes/apps/home/frigate/app/pvc.yaml
+++ b/kubernetes/apps/home/frigate/app/pvc.yaml
@@ -9,17 +9,17 @@ spec:
     requests:
       storage: 5Gi
   storageClassName: longhorn-fast
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: frigate-model-cache
-spec:
-  accessModes: ["ReadWriteOnce"]
-  resources:
-    requests:
-      storage: 3Gi
-  storageClassName: longhorn-fast
+# ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: frigate-model-cache
+# spec:
+#   accessModes: ["ReadWriteOnce"]
+#   resources:
+#     requests:
+#       storage: 3Gi
+#   storageClassName: longhorn-fast
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
