--- a/kubernetes/apps/database/redis/app/helmrelease.yaml
+++ b/kubernetes/apps/database/redis/app/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
       # Disable RDB persistence, AOF persistence already enabled.
       databases 80
       maxmemory 1800mb
-      maxmemory-policy allkeys-lru
+      maxmemory-policy noeviction
       maxclients 20000
       maxmemory-samples 5
       timeout 60
